Fixed button on bottom of card

--- a/products.html
+++ b/products.html
@@ -34,13 +34,13 @@
            <div class="col-sm-3">    <!-- class="col-md-3" -->
              <div class="card" style="height:100%">   <!--style="width: 15rem;" -->
                <img src="./product_img/cupcakes/c-feature-1.jpg" class="card-img-top"  alt="">
-               <div class="card-body">
+               <div class="card-body d-flex flex-column">
                 <!-- <div style="height:600px"> -->
                   <h5 class="card-title">Strawberry cupcake</h5>
                   <h5 style="font-size:12px">Cupcake</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <h5 class="card-text">12 $</h5>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
+                  <h5 class="card-text">12 $</h5>             
+                  <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
                 <!-- </div>               -->
               </div>
              </div>
@@ -48,13 +48,13 @@
            <div class="col-sm-3">
             <div class="card" style="height:100%">
               <img src="./product_img/cupcakes/c-feature-2.jpg"" class="card-img-top" alt="">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <!-- <div style="height:600px"> -->
                    <h5 class="card-title">Kiwi supreme</h5>
                    <h5 style="font-size:12px">Cupcake</h5>
                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                    <h5 class="card-text">12 $</h5>
-                   <a href="#" class="btn btn-primary">Add to cart</a>
+                   <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
                 <!-- </div> -->
              </div>
            </div>
@@ -62,13 +62,13 @@
           <div class="col-sm-3">
             <div class="card" style="height:100%">
               <img src="./product_img/cupcakes/c-feature-3.jpg"" class="card-img-top" alt="">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <!-- <div style="height:600px"> -->
                    <h5 class="card-title">Vanilla chocolate dream</h5>
                    <h5 style="font-size:12px">Cupcake</h5>
                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                    <h5 class="card-text">10 $</h5>
-                   <a href="#" class="btn btn-primary">Add to cart</a>
+                   <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
                 <!-- </div> -->
              </div>
            </div>
@@ -76,13 +76,13 @@
           <div class="col-sm-3">
             <div class="card" style="height:100%">
               <img src="./product_img/cupcakes/c-feature-4.jpg"" class="card-img-top"  alt="">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <!-- <div style="height:600px"> -->
                   <h5 class="card-title">Chocolate cupcake</h5>
                   <h5 style="font-size:12px">Cupcake</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <h5 class="card-text">11 $</h5>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
+                  <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
              </div>
            </div>
           </div>
@@ -92,52 +92,52 @@
           <div class="col-sm-3">    <!-- class="col-md-3" -->
            <div class="card" style="height:100%">   <!--style="width: 15rem;" -->
              <img src="./product_img/cupcakes/c-feature-5.jpg" class="card-img-top"  alt="">
-             <div class="card-body">
+             <div class="card-body d-flex flex-column">
              <!-- <div style="height:600px"> -->
                <h5 class="card-title">Red Velvet</h5>
                <h5 style="font-size:12px">Cupcake</h5>
                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                <h5 class="card-text">12 $</h5>
-               <a href="#" class="btn btn-primary">Add to cart</a>
+               <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
              </div>
            </div>
          </div>
          <div class="col-sm-3">    <!-- class="col-md-3" -->
           <div class="card" style="height:100%">   <!--style="width: 15rem;" -->
             <img src="./product_img/cupcakes/c-feature-6.jpg" class="card-img-top"  alt="">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
             <!-- <div style="height:600px"> -->
               <h5 class="card-title">Vegan Strawberry</h5>
               <h5 style="font-size:12px">Cupcake</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <h5 class="card-text">12 $</h5>
-              <a href="#" class="btn btn-primary">Add to cart</a>
+              <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
             </div>
           </div>
         </div>
         <div class="col-sm-3">    <!-- class="col-md-3" -->
           <div class="card" style="height:100%">   <!--style="width: 15rem;" -->
             <img src="./product_img/cupcakes/c-feature-7.jpg" class="card-img-top"  alt="">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
             <!-- <div style="height:600px"> -->
               <h5 class="card-title">Cherry Vanilla Chocolate</h5>
               <h5 style="font-size:12px">Cupcake</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <h5 class="card-text">12 $</h5>
-              <a href="#" class="btn btn-primary">Add to cart</a>
+              <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
             </div>
           </div>
         </div>
         <div class="col-sm-3">    <!-- class="col-md-3" -->
           <div class="card" style="height:100%">   <!--style="width: 15rem;" -->
             <img src="./product_img/cupcakes/c-feature-8.jpg" class="card-img-top"  alt="">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
             <!-- <div style="height:600px"> -->
               <h5 class="card-title">Raspberry</h5>
               <h5 style="font-size:12px">Cupcake</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <h5 class="card-text">12 $</h5>
-              <a href="#" class="btn btn-primary">Add to cart</a>
+              <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
             </div>
           </div>
         </div>
@@ -149,24 +149,24 @@
             <div class="col-sm-3">
               <div class="card" style="height:100%">   
                 <img src="./product_img/wedding_cakes/wedd_1.jpg"" class="card-img-top"  alt="">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Mango Dream</h5>
                     <h5 style="font-size:12px">Wedding Cake</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <h5 class="card-text">285 $</h5>
-                    <a href="#" class="btn btn-primary">Add to cart</a>
+                    <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
                </div>
              </div>
           </div>
           <div class="col-sm-3">
             <div class="card" style="height:100%">   
               <img src="./product_img/wedding_cakes/wedd_2.jpg"" class="card-img-top"  alt="">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                   <h5 class="card-title">Coconut Delight</h5>
                   <h5 style="font-size:12px">Wedding Cake</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <h5 class="card-text">190 $</h5>
-                  <a href="#" class="btn btn-primary">Add to chart</a>     <!-- max-width for long texts -->
+                  <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to chart</a>     <!-- max-width for long texts -->
                 <!-- </div> -->
              </div>
            </div>
@@ -174,12 +174,12 @@
          <div class="col-sm-3">
           <div class="card" style="height:100%">   
             <img src="./product_img/wedding_cakes/wedd_3.jpg"" class="card-img-top"  alt="">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Rustic Countryside</h5>
                 <h5 style="font-size:12px">Wedding Cake</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <h5 class="card-text">190 $</h5>
-                <a href="#" class="btn btn-primary">Add to cart</a>
+                <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
               <!-- </div> -->
            </div>
          </div>
@@ -187,12 +187,12 @@
       <div class="col-sm-3">
         <div class="card" style="height:100%">   
           <img src="./product_img/wedding_cakes/wedd_4.jpg"" class="card-img-top"  alt="">
-          <div class="card-body">
+          <div class="card-body d-flex flex-column">
               <h5 class="card-title">Flower Dream</h5>
               <h5 style="font-size:12px">Wedding Cake</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <h5 class="card-text">310 $</h5>
-              <a href="#" class="btn btn-primary">Add to cart</a>
+              <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
             <!-- </div> -->
          </div>
        </div>
@@ -203,12 +203,12 @@
      <div class="col-sm-3">
       <div class="card" style="height:100%">   
         <img src="./product_img/wedding_cakes/wedd_5.png"" class="card-img-top"  alt="">
-         <div class="card-body">
+         <div class="card-body d-flex flex-column">
             <h5 class="card-title">Buttercream Classic</h5>
             <h5 style="font-size:12px">Wedding Cake</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <h5 class="card-text">400 $</h5>
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
           <!-- </div> -->
         </div>
       </div>
@@ -216,12 +216,12 @@
      <div class="col-sm-3">
       <div class="card" style="height:100%">   
         <img src="./product_img/wedding_cakes/wedd_6.jpg"" class="card-img-top"  alt="">
-        <div class="card-body">
+        <div class="card-body d-flex flex-column">
             <h5 class="card-title">Lemon Custard</h5>
             <h5 style="font-size:12px">Wedding Cake</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <h5 class="card-text">390 $</h5>
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
           <!-- </div> -->
        </div>
       </div>
@@ -229,12 +229,12 @@
     <div class="col-sm-3">
       <div class="card" style="height:100%">   
         <img src="./product_img/wedding_cakes/wedd_7.jpg"" class="card-img-top"  alt="">
-        <div class="card-body">
+        <div class="card-body d-flex flex-column">
             <h5 class="card-title">Buttercream and Strawberry</h5>
             <h5 style="font-size:12px">Wedding Cake</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <h5 class="card-text">435 $</h5>
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
           <!-- </div> -->
        </div>
       </div>
@@ -242,12 +242,12 @@
     <div class="col-sm-3">
       <div class="card" style="height:100%">   
         <img src="./product_img/wedding_cakes/wedd_8.png" class="card-img-top"  alt="">
-        <div class="card-body">
+        <div class="card-body d-flex flex-column">
             <h5 class="card-title">Rustic Buttercream</h5>
             <h5 style="font-size:12px">Wedding Cake</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <h5 class="card-text">410 $</h5>
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a href="#" class="mt-auto btn btn-primary" style="max-width:150px">Add to cart</a>
           <!-- </div> -->
        </div>
       </div>
