Added social links for all pages

--- a/products.html
+++ b/products.html
@@ -261,9 +261,9 @@
   <aside style="padding-top:15px">
       <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
       <ul>               
-          <li class="horizontal"><a href="#"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
-          <li class="horizontal"><a href="#"><img src="./product_img/social/facebook_256.png" width="24px" height="24px"></img></a></li>
-          <li class="horizontal"><a href="#"><img src="./product_img/social/instagram_64.png" width="24px" height="24px"></img></a></li>                   
+          <li class="horizontal"><a href="https://www.twitter.com"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
+          <li class="horizontal"><a href="https://www.facebook.com"><img src="./product_img/social/facebook_256.png" width="24px" height="24px"></img></a></li>
+          <li class="horizontal"><a href="https://www.instagram.com"><img src="./product_img/social/instagram_64.png" width="24px" height="24px"></img></a></li>                   
       </ul>
   </aside>
     
