--- a/contacts.html
+++ b/contacts.html
@@ -71,9 +71,9 @@
         <aside>
             <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
             <ul style="margin-top:15px">               
-                <li class="horizontal"><a href="#"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
-                <li class="horizontal"><a href="#"><img src="./product_img/social/facebook_256.png" width="24px" height="24px"></img></a></li>
-                <li class="horizontal"><a href="#"><img src="./product_img/social/instagram_64.png" width="24px" height="24px"></img></a></li>                   
+                <li class="horizontal"><a href="https://www.twitter.com"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
+                <li class="horizontal"><a href="https://www.facebook.com"><img src="./product_img/social/facebook_256.png" width="24px" height="24px"></img></a></li>
+                <li class="horizontal"><a href="https://www.instagram.com"><img src="./product_img/social/instagram_64.png" width="24px" height="24px"></img></a></li>                   
             </ul>
         </aside>
           
