Added banner with sign-in button to products,about and contacts pages.

--- a/products.html
+++ b/products.html
@@ -9,7 +9,14 @@
     <link href="./products.css" rel="stylesheet">
 </head>
 <body>
-    
+     <div class="cont" style="background-color: rgb(253, 235, 244);height:60px;padding-top:15px">
+       <div style="margin-left:65%;display:flex;">
+         <img id="cart" src="./product_img/shopping-cart-24.png" style="margin-right:10px" />  <!-- style="position:absolute;right:250px;top:20px;z-index:10"/> -->
+         <button class="button button_danger" style="width:80px;border-radius:14px;font-family:Segoe UI;color:white;background-color:deeppink;border-color:deeppink;">
+         sign in</button>
+       </div>
+     </div>
+     
       <div class="container-fluid">
        <!-- header here -->
        <header class="center_text"  style="background-color:white;height:220px"> 
