--- a/about.html
+++ b/about.html
@@ -10,6 +10,14 @@
     <link href="./about.css" rel="stylesheet">
 </head>
 <body>
+   <div class="cont" style="background-color: rgb(253, 235, 244);height:60px;padding-top:15px">
+      <div style="margin-left:65%;display:flex;">
+         <img id="cart" src="./product_img/shopping-cart-24.png" style="margin-right:10px" />  <!-- style="position:absolute;right:250px;top:20px;z-index:10"/> -->
+         <button class="button button_danger" style="width:80px;border-radius:14px;font-family:Segoe UI;color:white;background-color:deeppink;border-color:deeppink;">
+        sign in</button>
+      </div>
+    </div>
+
     <div class="container-fluid" style="margin-bottom:-150px">
        <header class="center_text" style="background-color:white;height:220px"> 
          <a href="./index.html"><img src="./product_img/Munamii_150.png"  class="pic_corr" alt="Munamii"></a>
