fixed margin-problem for header on products.html not reaching 100% because container-fluid has a default padding of 15px

--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
        </div>
      </div>
      
-      <div class="container-fluid">
+      <div class="container-fluid header_corr">   
        <!-- header here -->
        <header class="center_text"  style="background-color:white;height:220px"> 
         <a href="./index.html"><img src="./product_img/Munamii_150.png" class="pic_corr" style="margin-left:0px" alt="Munamii"></a>
@@ -30,7 +30,7 @@
       </header>
       </div>
 
-      <section style="margin-bottom:100px">
+      <section style="margin-bottom:100px;">
       
       <div class="container">
         <h1 class="center_text" style="margin-top:30px;color:darkgrey">Our Cakes</h1>
