Made cart-symbol behave as link

--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
 <body>
      <div class="cont" style="background-color: rgb(253, 235, 244);height:60px;padding-top:15px">
        <div style="margin-left:65%;display:flex;">
-         <img id="cart" src="./product_img/shopping-cart-24.png" style="margin-right:10px" />  <!-- style="position:absolute;right:250px;top:20px;z-index:10"/> -->
+         <a href="#"><img id="cart" src="./product_img/shopping-cart-24.png" style="margin-right:10px" /></a>  <!-- style="position:absolute;right:250px;top:20px;z-index:10"/> -->
          <button class="button button_danger" style="width:80px;border-radius:14px;font-family:Segoe UI;color:white;background-color:deeppink;border-color:deeppink;">
          sign in</button>
        </div>
